...
    
    var body: some View {
        NavigationView {
            Form {
                Section {
                    HStack {
                        Text("Issuer")
                        Spacer()
                        Text(token.displayIssuer)
                            .foregroundColor(.gray)
                            .lineLimit(1)
                    }
                    HStack {
                        Text("Account Name")
                        Spacer()
                        Text(token.displayAccountName)
                            .foregroundColor(.gray)
                            .lineLimit(1)
                    }
                    // Assuming 'secret' is a sensitive piece of information, display it cautiously
...
